feat: finish the views lecture

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" />
-    <title>Title</title>
+  <th:block th:replace="fragments/head :: header('Home')"/>
 </head>
 <body>
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid hic quas ullam? Accusantium consequatur exercitationem inventore maiores nam nihil veritatis voluptate. Culpa dolores hic labore nihil perferendis sequi tenetur ut?
+<h1>Hello, <span th:text="${username}">this text is replaced</span></h1>
+
+<div th:if="${admin}">
+    <li th:if="${admin}"></li>
+    <li th:if="${admin}"></li>
+    <li th:if="${admin}"></li>
+</div>
+<button th:if="${admin}">Grade students</button>
+
+
+<ul>
+    <li th:each="name : ${names}">
+        <a href="#" th:text="${name}"></a>
+    </li>
+</ul>
+
 
 </body>
 </html>
