--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,7 +8,9 @@
 <th:block th:replace="fragments/navbar" />
 
     <h2 th:text="${post.title}"></h2>
+    written by: <h5 th:text="${post.author.email}"></h5>
     <p th:text="${post.body}"></p>
+
 
 
 </body>
