--- a/src/main/resources/templates/ads/create.html
+++ b/src/main/resources/templates/ads/create.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:replace="fragments/head :: header('Create New Post')"/>
+    <th:block th:replace="fragments/head :: header('Create New Ad')"/>
 </head>
 
 <body>
 <th:block th:replace="fragments/navbar" />
 
-<h2>Create New Post</h2>
-<form method="post" action="/posts/create">
-    <label for="title">Title</label><input type="text" name="title" id="title"/>
-    <label for="body">Body</label><textarea name="body" id="body"/>
-    <button>Submit</button>
+<h2>Create New Ad</h2>
+<!--<form method="post" action="/ads/create">-->
+    <!--<label for="title">Title</label><input type="text" name="title" id="title"/><br/>-->
+    <!--<label for="description">Description</label><textarea name="description" id="description"/><br/>-->
+    <!--<button>Submit</button>-->
+<!--</form>-->
+
+<form th:method="post" th:action="@{/ads/create}" th:object="${ad}">
+    Title:
+    <input th:field="*{title}" />
+    <br />
+    Description:
+    <textarea th:field="*{description}" th:max="255" />
+    <br />
+    <input type="submit" />
 </form>
 
 <th:block th:replace="fragments/navbar" />
