--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -8,9 +8,11 @@
 <th:block th:replace="fragments/navbar" />
 
 <h2>Create New Post</h2>
-<form method="post" action="/posts/create">
-    <label for="title">Title</label><input type="text" name="title" id="title"/>
-    <label for="body">Body</label><textarea name="body" id="body"/>
+<form th:method="post" th:action="@{/posts/create}" th:object="${post}">
+    <label for="title">Title</label>
+    <input type="text" th:field="*{title}"/>
+    <label for="body">Body</label>
+    <textarea th:field="*{body}"/>
     <button>Submit</button>
 </form>
 
