--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,10 +1,16 @@
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+
 <nav>
     <ul>
-        <li>Welcome to our site. <a href="/roll-dice">Play our game.</a></li>
-        <li>
+        <li>Welcome to our site.
+            <span sec:authorize="isAuthenticated()" th:text="${#authentication.principal.username}"></span>
+            <a href="/roll-dice">Play our game.</a></li>
+        <li sec:authorize="isAuthenticated()" >
             <form th:action="@{/logout}" th:method="post">
                 <button class="btn-link btn" style="margin-top: 8px">Logout</button>
             </form>
         </li>
     </ul>
 </nav>
+</html>
